# ros2_ouster_drivers

./: .clang-format  CHANGELOG.rst  README.md  node_test.rviz
ouster_msgs/: CMakeLists.txt  package.xml
ouster_msgs/msg/: Metadata.msg
ouster_msgs/srv/: GetMetadata.srv
ros2_ouster/: CMakeLists.txt  Doxyfile  README.md  package.xml
ros2_ouster/design/: design_doc.md
ros2_ouster/include/ros2_ouster/: conversions.hpp  driver_types.hpp  exception.hpp  full_rotation_accumulator.hpp  image_os.hpp  lifecycle_interface.hpp  ouster_driver.hpp  point_os.hpp  ringbuffer.hpp  ros2_utils.hpp  scan_os.hpp  sensor.hpp  sensor_tins.hpp  string_utils.hpp
ros2_ouster/include/ros2_ouster/OS1/: OS1.hpp  OS1_packet.hpp  OS1_sensor.hpp  OS1_util.hpp  processor_factories.hpp
ros2_ouster/include/ros2_ouster/OS1/processors/: image_processor.hpp  imu_processor.hpp  pointcloud_processor.hpp  scan_processor.hpp
ros2_ouster/include/ros2_ouster/client/: client.h  client_factory.hpp  lidar_scan.h  point.h  types.h  version.h
ros2_ouster/include/ros2_ouster/client/impl/: curl_client.hpp  http.hpp  netcompat.h  parsing.h  tcp.hpp
ros2_ouster/include/ros2_ouster/client/interfaces/: client_interface.hpp
ros2_ouster/include/ros2_ouster/client/optional-lite/: optional.hpp
ros2_ouster/include/ros2_ouster/client/viz/: autoexposure.h  beam_uniformity.h
ros2_ouster/include/ros2_ouster/interfaces/: configuration.hpp  data_interface.hpp  data_processor_interface.hpp  lifecycle_interface.hpp  metadata.hpp  sensor_interface.hpp
ros2_ouster/include/ros2_ouster/processors/: image_processor.hpp  imu_processor.hpp  pointcloud_processor.hpp  processor_factories.hpp  scan_processor.hpp
ros2_ouster/launch/: driver_launch.py  os1.py.launch  os1_launch.py  tins_driver_launch.py
ros2_ouster/params/: default_config.yaml  driver_config.yaml  latest_metadata.json  metadata.json  os1.yaml  ouster_os0128_1024_metadata.json  ouster_os0128_2048_metadata.json  sensor.yaml  tins_config.yaml  tins_driver_config.yaml
ros2_ouster/src/: OS1_sensor.cpp  driver_types.cpp  lifecycle_interface.cpp  main.cpp  main_default.cpp  main_tins.cpp  ouster_driver.cpp  sensor.cpp  sensor_tins.cpp
ros2_ouster/src/OS1/: OS1_sensor.cpp
ros2_ouster/src/client/: client.cpp  lidar_scan.cpp  netcompat.cpp  parsing.cpp  types.cpp
ros2_ouster_drivers/: CMakeLists.txt  Doxyfile  package.xml
ros2_ouster_drivers/design/: design_doc.md
ros2_ouster_drivers/include/ros2_ouster/: conversions.hpp  lifecycle_interface.hpp  ouster_driver.hpp
ros2_ouster_drivers/include/ros2_ouster/OS1/: OS1.hpp  OS1_packet.hpp  OS1_util.hpp
ros2_ouster_drivers/include/ros2_ouster/interfaces/: configuration.hpp  data_interface.hpp  metadata.hpp  sensor_interface.hpp
ros2_ouster_drivers/src/: OS1_sensor.cpp  main.cpp  ouster_driver.cpp
